default/ns3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ns3
  name: ns3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ns3
  template:
    metadata:
      labels:
        app: ns3
    spec:
      containers:
        - image: fraoustin/fancyindex
          name: ns3
          ports:
            - containerPort: 80
          volumeMounts:
            # name must match the volume name below
            - name: nfs
              mountPath: "/share"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-pvc
