default/ns3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ns3
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: ns3
