default/ns3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ns3
spec:
  rules:
    - host: "ns3.tristan.moe"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ns3
                port:
                  number: 8080
  tls:
    - hosts:
        - "ns3.tristan.moe"
      secretName: wildcard-tristan-moe
